Update to index.html with divs for app

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <title>Progress</title>
 </head>
 <body>
+  <div class="color-palette" id="colorPalette"></div>
+  
+  <div id="app"></div>
 
+  <button class="color-mix" id="colorMix">Color Mix</button>
+  
+  <script src="component.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
