2nd version of design started...neumorph styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="color-palette" id="colorPalette"></div>
   
-  <div id="app"></div>
+  <div id="app" class="mix-app"></div>
 
   <button class="color-mix" id="colorMix">Color Mix</button>
   
